# sqlite-wasm-rs

./: Cargo.toml  README.md  build.rs
.github/workflows/: test.yml
sqlite-vec/: sqlite3_wasm_extra_init.c  upgrade.sh
tests/full/: mod.rs  sqlite_vec.rs
