[package]
name = "sqlite-wasm-rs"
version = "0.4.6"
edition = "2021"
authors = ["Spxg <unsafe@outlook.es>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/Spxg/sqlite-wasm-rs"
description = "Provide sqlite solution for wasm32-unknown-unknown target."
categories = ["development-tools::ffi", "wasm", "database"]
keywords = ["sqlite", "sqlite-wasm", "wasm", "webassembly", "javascript"]
rust-version = "1.78.0"

[dependencies]
once_cell = "1.21.3"
tokio = { version = "1.45.1", features = ["sync"] }
thiserror = "2.0.12"

wasm-bindgen = "0.2.104"
wasm-bindgen-futures = "0.4.54"
js-sys = "0.3.81"
web-sys = { version = "0.3.81", features = [
  "StorageManager",
  "FileSystemSyncAccessHandle",
  "FileSystemDirectoryHandle",
  "FileSystemGetDirectoryOptions",
  "FileSystemReadWriteOptions",
  "WorkerGlobalScope",
  "WorkerNavigator",
  "FileSystemGetFileOptions",
  "FileSystemFileHandle",
]}

indexed_db_futures = { version = "0.6.4", optional = true }
sqlite-wasm-libc = { path = "crates/sqlite-wasm-libc", version = "0.1.0", optional = true }

[features]
default = ["bundled"]
bundled = ["cc"]
precompiled = []
buildtime-bindgen = ["bindgen"]
custom-libc = ["bundled", "sqlite-wasm-libc"]
# SQLite3MultipleCiphers
# <https://github.com/utelle/SQLite3MultipleCiphers>
# <https://utelle.github.io/SQLite3MultipleCiphers>
sqlite3mc = ["bundled"]
# sqlite-vec: Vector search extension
# <https://github.com/asg017/sqlite-vec>
# <https://alexgarcia.xyz/sqlite-vec>
sqlite-vec = ["bundled"]
relaxed-idb = ["indexed_db_futures"]

[dev-dependencies]
wasm-bindgen-test = "0.3.54"
web-time = "1.1.0"

[build-dependencies]
bindgen = { version = "0.72", optional = true }
cc = { version = "1.2.27", optional = true }

[package.metadata.docs.rs]
no-default-features = true
features = ["precompiled"]
targets = ["wasm32-unknown-unknown"]

[workspace]
resolver = "2"
exclude = ["examples/custom-libc"]
members = [
  "crates/sqlite-wasm-libc",
  "examples/implement-a-vfs",
  "examples/nodejs"
]
